Modification to basic user interface & new Sass mixin

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,12 +35,6 @@ h3 {
   color: #669900;
   border-bottom: 1px solid #F2F2F2; }
 
-span.subtitle {
-  font-weight: bold;
-  font-size: 15px;
-  color: #669900;
-  text-transform: uppercase; }
-
 .smalltext {
   font-size: 9px; }
 
@@ -71,9 +65,10 @@ a, a:visited {
   height: 100px;
   vertical-align: top;
   text-align: center;
-  padding: 0px 0px 0px 2px; }
+  padding: 0px; }
 
 .sideDesign {
+  display: none;
   vertical-align: top;
   padding: 0px;
   margin: 0px;
@@ -106,16 +101,14 @@ a, a:visited {
   padding: 0px;
   border-spacing: 0px;
   border-collapse: collapse; }
-
-.datatable th, .datatable td {
-  text-align: left;
-  padding: 5px; }
+  .datatable td {
+    border-bottom: 1px dashed #CCCCCC; }
+  .datatable th, .datatable td {
+    text-align: left;
+    padding: 5px; }
 
 td {
   padding: 2px; }
-
-.datatable td {
-  border-bottom: 1px dashed #CCCCCC; }
 
 .thead {
   background-color: #92D050;
@@ -147,7 +140,7 @@ td {
   background-color: #F2FAED; }
 
 .menuContainer {
-  padding: 20px 0px 20px 5px;
+  padding: 20px 0px 20px 0px;
   color: #acacac;
   vertical-align: top;
   font-size: 13px; }
@@ -255,7 +248,7 @@ td {
 
 .portalbox_header {
   font-weight: bold;
-  background: repeat-x top left url(images/bheader.gif) scroll;
+  background: repeat-x top left url(../images/bheader.gif) scroll;
   border-bottom: 1px solid #CCCCCC;
   height: 1%; }
 
@@ -263,7 +256,7 @@ td {
   color: #333333; }
 
 .portalbox_calendar {
-  background: repeat-x top left url(images/calendar-background.png) scroll #aecd78;
+  background: repeat-x top left url(../images/calendar-background.png) scroll #aecd78;
   color: #FFFFFF;
   font-size: 14px;
   border-top: 0px solid #FFFFFF;
@@ -326,16 +319,19 @@ input.button {
 #currentmodule_name {
   font-size: 14px;
   text-align: center;
-  cursor: pointer; }
+  cursor: pointer;
+  border-bottom: 1px solid #f2f2f2; }
+  #currentmodule_name div > a:hover {
+    font-weight: 600; }
 
 .currentmodule_name_hover {
-  background: url(images/sort_desc.gif) no-repeat 90% 90%; }
+  background: url(../images/sort_desc.gif) no-repeat 90% 90%; }
 
 .moduleslist_container {
   display: none;
   text-align: left;
   width: 150px;
-  margin-left: 40px;
+  margin-left: 5px;
   left: 40px;
   position: absolute;
   border-left: 1px solid #91b64f;
@@ -411,9 +407,9 @@ table.sectionbox td {
   border-top: 1px solid #CCC !important; }
 
 .tablefilters_row {
-  -moz-box-shadow: inset 0px 5px 10px #EEF4FB;
-  -webkit-box-shadow: inset 0px 5px 10px #EEF4FB;
-  box-shadow: inset 0px 5px 10px #EEF4FB; }
+  -moz-box-shadow: inset 0px 5px 10px 5px #eef4fb;
+  -webkit-box-shadow: inset 0px 5px 10px 5px #eef4fb;
+  box-shadow: inset 0px 5px 10px 5px #eef4fb; }
 
 .tablefilters_row_toggle td {
   padding: 0px !important;
@@ -552,8 +548,9 @@ tr.dummytrow td, tr.dummytrow th {
   border-radius: 4px; }
 
 .requiredfield:focus {
-  -webkit-box-shadow: 0 1px 2px 2px #FF142C;
-  box-shadow: 0 1px 2px 1px #FF142C; }
+  -moz-box-shadow: 0px 1px 2px 1px #ff142c;
+  -webkit-box-shadow: 0px 1px 2px 1px #ff142c;
+  box-shadow: 0px 1px 2px 1px #ff142c; }
 
 .sortable {
   list-style-type: none;
