--- a/scss/_constants.scss
+++ b/scss/_constants.scss
@@ -13,6 +13,7 @@ Last Update:    @zaher.reda    Apr 13, 2014 | 10:04:22 PM
 
 $color_green: #91b64f;
 $color_grey: #F2F2F2;
+$color_polar: #F7FAFD;
 
 @mixin border-radius($radius) {
     -webkit-border-radius: $radius;
