--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -393,7 +393,7 @@ input.button {
     text-align:center;
     text-shadow:1px 1px 0px #689324;
 }
-input.main {
+input[type="submit"].main {
     min-width: 160px;
 }
 
