Add button to access tasks board from calendar

--- a/css/styles.css
+++ b/css/styles.css
@@ -328,7 +328,7 @@ td {
   height: 20px;
   vertical-align: middle !important; }
 
-input.button {
+input.button, button {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
