--- a/css/calendar.css
+++ b/css/calendar.css
@@ -12,23 +12,23 @@ table.calendar {
     width:100%;
 }
 
-.calendar_head, .calendar_head_legend { 
-    background: #91b64f; 
-    font-weight: bold; 
+.calendar_head, .calendar_head_legend {
+    background: #91b64f;
+    font-weight: bold;
     text-align: center;
-    border-bottom: 1px solid #999; 
-    border-top: 1px solid #999; 
-    border-right: 0px solid #999; 
+    border-bottom: 1px solid #999;
+    border-top: 1px solid #999;
+    border-right: 0px solid #999;
     box-sizing: border-box;
     -moz-box-sizing:border-box;
-    -webkit-box-sizing:border-box;*/
+    -webkit-box-sizing:border-box;
     padding: 5px 0px;
     -moz-user-select:none;
     -webkit-user-select:none;
 }
 
 .calendar_head {
-    width: 170px;	
+    width: 170px;
 }
 
 .calendar_head_legend {
@@ -45,7 +45,7 @@ table.calendar {
     border-left: 1px solid #CCC;
 }
 .calendar_weeknum a {
-    color:#000 !important;	
+    color:#000 !important;
 }
 
 .calendar_day, .calendar_weeknum, .calendar_today  {
@@ -59,25 +59,25 @@ table.calendar {
 }
 
 .calendar_noday {
-    background: #eee; 
+    background: #eee;
     width: 120px;
 }
 
 .calendar_today {
     width: 120px;
     vertical-align: top;
-    background: #D5F2BF; 
+    background: #D5F2BF;
 }
 
 .calendar_day, .calendar_noday, .calendar_weeknum, .calendar_today {
-    padding: 5px; 
+    padding: 5px;
     min-height: 80px;
-    border-bottom: 1px solid #999; 
+    border-bottom: 1px solid #999;
     border-right: 1px solid #999;
     height: 80px;
 }
 
-.calendar_day_number { 
+.calendar_day_number {
     background: #CCC;
     padding: 5px;
     color: #333333;
@@ -103,7 +103,7 @@ table.calendar {
 }
 
 .calendar_hourdepthrow {
-    border-bottom: 1px dotted #999; 
+    border-bottom: 1px dotted #999;
 }
 
 .calendar_hour, .calendar_thishour, .calendar_weekview_today {
@@ -175,12 +175,12 @@ table.calendar {
 }
 
 #week_days_container {
-    width:100%; 
-    height: 1000px; 
+    width:100%;
+    height: 1000px;
     overflow: scroll;
-    vertical-align:top; 
-    margin:0; 
-    padding:0; 
+    vertical-align:top;
+    margin:0;
+    padding:0;
     position: relative;
 }
 
