--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -388,7 +388,7 @@ td { padding: 2px; }
     vertical-align: middle !important;
 }
 
-input.button, button {
+input.button,.button, button {
     @include border-radius(4px);
     background: $color_green;
     text-indent:0;
