--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -716,3 +716,18 @@ tr.dummytrow td, tr.dummytrow th {
     display:inline-block;
     padding: 0 0 0 0px;
 }
+
+/* Overwrite JoyRide2 Style */
+.joyride-tip-guide .joyride-next-tip {
+    background: $color_green !important;
+    border:1px solid #83c41a !important;
+}
+
+.joyride-next-tip:hover {
+    background-color: #8cb82b !important;
+    border: 1px solid #83c41a !important;
+}
+
+[id$="_helptour"], [class$="_helptour"] {
+    display: none;
+}
