--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,8 @@ a, a:visited {
   border-left: 1px solid #E8E8E8;
   border-right: 1px solid #E8E8E8;
   padding: 10px;
-  font-size: 13px; }
+  font-size: 13px;
+  position: relative; }
 
 .contentContainer table {
   font-size: 13px; }
