--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -93,6 +93,7 @@ a, a:visited {
     border-right: 1px solid #E8E8E8;
     padding: 10px;
     font-size: 13px;
+    position: relative;
 }
 
 .contentContainer {
