--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -732,3 +732,16 @@ tr.dummytrow td, tr.dummytrow th {
 [id$="_helptour"], [class$="_helptour"] {
     display: none;
 }
+
+.tm_sections{
+    height: 75px;
+    display: block;
+    background-image: url('../images/chevron-down.png');
+    background-repeat: no-repeat;
+    font-weight: bold;
+    cursor: pointer;
+    background-position: right bottom;
+    margin-bottom: 50px;
+    margin-top: 50px;
+    position:relative;
+}
