--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*
-Copyright ┬⌐ 2014 Orkila International Offshore, All Rights Reserved
+Copyright ┬® 2014 Orkila International Offshore, All Rights Reserved
 
 [Provide Short Descption Here]
 $id: _constants.scss
@@ -652,3 +652,17 @@ tr.dummytrow td, tr.dummytrow th {
 
 [id$="_helptour"], [class$="_helptour"] {
   display: none; }
+
+.tm_sections {
+  height: 75px;
+  display: block;
+  background-image: url("../images/chevron-down.png");
+  background-repeat: no-repeat;
+  font-weight: bold;
+  cursor: pointer;
+  background-position: right bottom;
+  margin-bottom: 50px;
+  margin-top: 50px;
+  position: relative; }
+
+/*# sourceMappingURL=styles.css.map */
