Fix issues and apply improvements in Budgeting YEF
1. Fix issue in max value validation (client side)
2. Add styling for field when max value warning is triggered
3. Fix issue in date ranges of generate year end forecast and createyearendforecast

--- a/css/styles.css
+++ b/css/styles.css
@@ -667,3 +667,6 @@ tr.dummytrow td, tr.dummytrow th {
 @media print {
   .hidden-print {
     display: none !important; } }
+.warning {
+  box-shadow: 0 0 5px #ffcc33;
+  border: 1px solid #ffcc33; }
