--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -755,3 +755,7 @@ tr.dummytrow td, tr.dummytrow th {
     box-shadow: 0 0 5px rgba(255, 204, 51, 1);
     border: 1px solid rgba(255, 204, 51, 1);
 }
+
+tfoot .coltotal, tfoot .colavg {
+    font-weight: bold;
+}
